# build-disp

./: CMakeLists.txt  README.md  command.hpp  dispatcher.cpp  dispatcher.hpp  main.cpp  params_map.cpp  params_map.hpp  plugins_manager.cpp  plugins_manager.hpp  plugins_manager_api.hpp  source.hpp  task.cpp  task.hpp  tasks_loader.cpp  tasks_loader.hpp
plugins/cmd-command/: CMakeLists.txt  cmd_command.cpp
plugins/cmd-source/: CMakeLists.txt  cmd_source.cpp
plugins/git_source/: CMakeLists.txt  git_source.cpp
